<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BotChatty</string>

    <!-- Sign In Screen -->
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_username_email">Enter username/email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>

    <!-- Sign Up Screen -->
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add Image</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="online">Online</string>
    <string name="select_user">Select User</string>

    <string name="send_otp_code">Send OTP Code</string>
    <string name="back">Back</string>
    <string name="verify">Verify</string>
    <string name="didnt_receive_code">Didn\'t receive the code? </string>
    <string name="resend">Resend</string>
    <string name="code_expires_in">Code expires in: </string>
    <string name="empty_number">-</string>

    <!-- Call UI Strings -->
    <string name="calling">Calling...</string>
    <string name="call_connected">Connected</string>
    <string name="call_ended">Call ended</string>
    <string name="waiting_for_answer">Waiting for answer...</string>

    <!-- Block User Functionality -->
    <string name="blocked_by_user_hint">You cannot send messages to this user</string>
    <string name="you_are_blocked">You have been blocked by this user</string>
    <string name="you_blocked_this_user">You have blocked this user</string>
    <string name="type_a_message">Type a message</string>
    <string name="blocked_both_ways">Both users have blocked each other</string>
    <string name="blocked_both_ways_hint">This conversation is blocked</string>
    <string name="you_blocked_hint">You have blocked this conversation</string>
    
    <!-- Shared Media Strings -->
    <string name="shared_media">Shared Media</string>
    <string name="view_all">View All</string>
    <string name="no_shared_media">No shared media</string>
    <string name="no_shared_images">No images shared</string>
    <string name="no_shared_videos">No videos shared</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="loading_media">Loading media...</string>
</resources>